FAQ content list not showing problem solve
git-svn-id: https://plugins.svn.wordpress.org/wpb-advanced-faq/trunk@1295186 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/wpb_af_style.css
+++ b/assets/css/wpb_af_style.css
@@ -17,7 +17,7 @@
 .wpb_af_area > li > ul p:last-child {
   margin-bottom: 0;
 }
-.wpb_af_area li {
+.wpb_af_area > li {
   list-style: none;
 }
 .wpb_af_area > li > ul > li {
